prusti-tests/tests/counterexamples/verify-fail/no-annotations/assert-false.rs
/* COUNTEREXAMPLE : 
    fn main():
        empty
    (always fails)
*/

fn main() {
    assert!(false);  //~ ERROR the asserted expression might not hold
}
